💄 Fix height of urlbar container contents overflowing

--- a/components/search/content/browser-urlbar-container.css
+++ b/components/search/content/browser-urlbar-container.css
@@ -5,5 +5,6 @@
 @import url("chrome://dot/content/widgets/browser-urlbar.css");
 
 :host(browser-urlbar-container) {
+    display: flex;
     flex: 1;
 }
